[package]
name = "rustbasic"
version = "0.0.12"
edition = "2021"
authors = ["rustbasic <timearea@naver.com>"]
description = "Rust Basic : Planned Development"
readme = "README.md"
repository = "https://github.com/rustbasic/rustbasic/"
license = "MIT OR Apache-2.0"
keywords = ["rust", "rustbasic", "basic", "wasm"]
categories = ["rust-patterns", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[registries.crate-io]
protocol = "sparse"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2       # Used to fast and small wasm.
#opt-level = 3       # Used to fast.

[dependencies]
rustbasic-macro = { version = "0.0.2", path = "c:/prog/rustbasic-macro" }
# rustbasic-macro = "0.0.2"
lazy_static = "1.4.0"
